Added rc.xml commands, changed pytyle2 config.
Former-commit-id: 88f87d842f2a134279887b8c7a0c162750d93ec8

--- a/.config/pytyle2/config.ini
+++ b/.config/pytyle2/config.ini
@@ -87,9 +87,9 @@ MOVETIME_OFFSET = 0.5
 # A list of tilers available when cycling, in order. The first
 # tiler is the default.
 tilers = Vertical Horizontal Maximal HorizontalRows VerticalRows Cascade Center
-ignore = krunner gmrun gimp sh
-decorations = Yes
-borders = Yes
+ignore = krunner gmrun gimp sh dmenu_run
+decorations =No 
+borders = No
 border_width = 4
 borders_active_color = 0xff0000
 borders_inactive_color = 0x008800
