Changed path for MPD.
Former-commit-id: b593a845c202412a84e5df393f64217b238c22d3

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -3,7 +3,7 @@ db_file            "~/.config/mpd/database"
 log_file           "~/.config/mpd/log"
 
 # Optional
-music_directory    "/mnt/Storage/Media/Music"
+music_directory    "~/Music"
 playlist_directory "~/.config/mpd/playlists"
 pid_file           "~/.config/mpd/pid"
 state_file         "~/.config/mpd/state"
