Updated workspaces, added mpd visualization

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,3 +1,6 @@
+#
+# weechat.conf -- weechat v0.4.3
+#
 
 [debug]
 
@@ -6,6 +9,7 @@ command_after_plugins = "/buffer clear"
 command_before_plugins = ""
 display_logo = off
 display_version = off
+sys_rlimit = ""
 
 [look]
 align_end_of_lines = message
@@ -13,7 +17,13 @@ bar_more_down = " + "
 bar_more_left = " -- "
 bar_more_right = " ++ "
 bar_more_up = " - "
+buffer_auto_renumber = on
 buffer_notify_default = all
+buffer_position = end
+buffer_search_case_sensitive = off
+buffer_search_force_default = off
+buffer_search_regex = off
+buffer_search_where = message
 buffer_time_format = " "
 color_basic_force_bold = off
 color_inactive_buffer = off
@@ -22,13 +32,16 @@ color_inactive_prefix = on
 color_inactive_prefix_buffer = on
 color_inactive_time = off
 color_inactive_window = off
+color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
 confirm_quit = off
 day_change = on
-day_change_time_format = "%a, %d %b %Y"
+day_change_message_1date = "-- %a, %d %b %Y --"
+day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
 eat_newline_glitch = off
+emphasized_attributes = ""
 highlight = ""
 highlight_regex = ""
 highlight_tags = ""
@@ -40,21 +53,26 @@ hotlist_names_count = 3
 hotlist_names_length = 0
 hotlist_names_level = 12
 hotlist_names_merged_buffers = off
+hotlist_prefix = "H: "
 hotlist_short_names = on
 hotlist_sort = group_time_asc
+hotlist_suffix = ""
 hotlist_unique_numbers = on
 input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
 input_undo_max = 32
 item_buffer_filter = "*"
+item_buffer_zoom = "!"
 item_time_format = "%l:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
+jump_smart_back_to_buffer = on
+key_bind_safe = on
 mouse = off
 mouse_timer_delay = 100
-nickmode = on
-nickmode_empty = off
+nick_prefix = ""
+nick_suffix = ""
 paste_bracketed = off
 paste_bracketed_timer_delay = 10
 paste_max_lines = 5
@@ -63,15 +81,17 @@ prefix_align = right
 prefix_align_max = 0
 prefix_align_min = 0
 prefix_align_more = "+"
+prefix_align_more_after = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
+prefix_buffer_align_more_after = on
 prefix_error = " !!! "
 prefix_join = " > "
 prefix_network = " - "
 prefix_quit = " < "
 prefix_same_nick = ""
-prefix_suffix = ":"
+prefix_suffix = "|"
 read_marker = line
 read_marker_always_show = off
 read_marker_string = "- "
@@ -83,8 +103,12 @@ scroll_page_percent = 100
 search_text_not_found_alert = on
 separator_horizontal = "-"
 separator_vertical = ""
-set_title = on
+tab_width = 1
 time_format = "%a, %d %b %Y %T"
+window_auto_zoom = off
+window_separator_horizontal = on
+window_separator_vertical = on
+window_title = "WeeChat ${info:version}"
 
 [palette]
 100 = ""
@@ -334,6 +358,7 @@ chat = white
 chat_bg = default
 chat_buffer = white
 chat_channel = white
+chat_day_change = cyan
 chat_delimiters = green
 chat_highlight = yellow
 chat_highlight_bg = default
@@ -342,8 +367,13 @@ chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
 chat_nick = cyan
 chat_nick_colors = "magenta,lightcyan,lightmagenta,lightgreen,lightred,brown,darkbrown"
+chat_nick_offline = default
+chat_nick_offline_highlight = default
+chat_nick_offline_highlight_bg = blue
 chat_nick_other = white
+chat_nick_prefix = green
 chat_nick_self = green
+chat_nick_suffix = green
 chat_prefix_action = white
 chat_prefix_buffer = red
 chat_prefix_buffer_inactive_buffer = darkgray
@@ -362,6 +392,8 @@ chat_text_found_bg = lightmagenta
 chat_time = red
 chat_time_delimiters = red
 chat_value = cyan
+emphasized = yellow
+emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
 nicklist_away = cyan
@@ -409,6 +441,7 @@ max_visited_buffers = 50
 connection_timeout = 60
 gnutls_ca_file = "%h/ssl/CAs.pem"
 gnutls_handshake_timeout = 30
+proxy_curl = ""
 
 [plugin]
 autoload = "*"
@@ -490,8 +523,9 @@ title.size_max = 0
 title.type = root
 
 [layout]
-buffer = "core;weechat;1"
-window = "1;0;0;0;core;weechat"
+default.buffer = "core;weechat;1"
+default.window = "1;0;0;0;core;weechat"
+default.current = on
 
 [notify]
 
@@ -772,4 +806,3 @@ meta2-D = "/cursor move left"
 @chat:wheeldown = "/window scroll_down -window ${_window_number}"
 @chat:wheelup = "/window scroll_up -window ${_window_number}"
 @*:button3 = "/cursor go ${_x},${_y}"
-
