--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -2,6 +2,35 @@ visualizer_fifo_path = "/tmp/mpd.fifo"
 visualizer_output_name = "my_fifo"
 visualizer_sync_interval = "30" 
 visualizer_in_stereo = "yes"
-#visualizer_type = "wave" (spectrum/wave)
 visualizer_type = "spectrum" (spectrum/wave)
 
+# Playlist
+ song_columns_list_format = "$L(9)[white]{l} (20)[red]{a} (30)[green]{b}$R(20)[cyan]{t}"
+ now_playing_prefix = "$b"
+now_playing_subfix = "/$b"
+ playlist_display_mode = "classic" (classic/columns)
+ autocenter_mode = "no"
+centered_cursor = "no"
+ cyclic_scrolling = "yes"
+mouse_list_scroll_whole_page = "no"
+
+ song_library_format = "{%n > }{%t}|{%f}"
+
+ # Bars
+ song_status_format = "{%a - }{%t - }{%b}"
+progressbar_look = "|> "
+ progressbar_look = "─╼ "
+ titles_visibility = "no"
+ header_visibility = "no"
+ statusbar_visibility = "no" 
+
+ # Browser
+ browser_playlist_prefix = "$2plist »$9 "
+ browser_display_mode = "classic" (classic/columns)
+
+
+ # Others
+ song_window_title_format = "MPD: {%a > }{%t}{ [%b{ Disc %d}]}|{%f}"
+ search_engine_display_mode = "columns" (classic/columns)
+ follow_now_playing_lyrics = "yes"
+ display_screens_numbers_on_start = "no"
