--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -524,7 +524,13 @@ title.type = root
 
 [layout]
 default.buffer = "core;weechat;1"
-default.window = "1;0;0;0;core;weechat"
+default.buffer = "irc;server.freenode;1"
+default.buffer = "irc;server.rizon;1"
+default.buffer = "irc;server.blinkenshell;2"
+default.buffer = "irc;blinkenshell.#blinkenshell;3"
+default.buffer = "irc;rizon.#/g/technology;4"
+default.buffer = "irc;rizon.#/g/sicp;5"
+default.window = "1;0;0;0;irc;rizon.#/g/sicp"
 default.current = on
 
 [notify]
