--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -530,7 +530,7 @@ default.buffer = "irc;server.blinkenshell;2"
 default.buffer = "irc;blinkenshell.#blinkenshell;3"
 default.buffer = "irc;rizon.#/g/technology;4"
 default.buffer = "irc;rizon.#/g/sicp;5"
-default.window = "1;0;0;0;irc;rizon.#/g/sicp"
+default.window = "1;0;0;0;irc;rizon.#/g/technology"
 default.current = on
 
 [notify]
