i3 bar changes, removed all but date.
Former-commit-id: 7d57a587fc62d43f95d2594f932c3ba7094b61b9

--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -9,7 +9,7 @@
     background_image = None
     antialias = False
     show_titlebar = False
-    font = Tewi 9
+    font = GohuFont 10
 [layouts]
   [[default]]
     [[[child1]]]
