--- a/.i3status.conf
+++ b/.i3status.conf
@@ -11,11 +11,11 @@ general {
         interval = 5
 }
 
-order += "disk /"
-order += "run_watch DHCP"
-order += "run_watch VPN"
-order += "ethernet eth0"
-order += "load"
+#order += "disk /"
+#order += "run_watch DHCP"
+#order += "run_watch VPN"
+#order += "ethernet eth0"
+#order += "load"
 order += "tztime local"
 
 wireless wlan0 {
@@ -34,7 +34,7 @@ run_watch DHCP {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%b %d, %Y %I:%M%P"
 }
 
 load {
