--- a/.i3/config
+++ b/.i3/config
@@ -14,7 +14,7 @@ set $left HDMI-0
 set $center DisplayPort-0
 set $right DVI-1
 
-new_window none
+new_window 1pixel
 new_float 1pixel
 
 workspace "⋅" output $left
@@ -146,6 +146,9 @@ bindsym $mod+g mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+#        output $center
+        position top
+        workspace_buttons yes
         status_command i3status
 }
 
