--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -91,7 +91,7 @@ prefix_join = " > "
 prefix_network = " - "
 prefix_quit = " < "
 prefix_same_nick = ""
-prefix_suffix = "|"
+prefix_suffix = "│"
 read_marker = line
 read_marker_always_show = off
 read_marker_string = "- "
@@ -529,8 +529,7 @@ default.buffer = "irc;server.rizon;1"
 default.buffer = "irc;server.blinkenshell;2"
 default.buffer = "irc;rizon.#/g/technology;3"
 default.buffer = "irc;rizon.#/g/sicp;4"
-default.buffer = "irc;blinkenshell.#blinkenshell;5"
-default.window = "1;0;0;0;irc;blinkenshell.#blinkenshell"
+default.window = "1;0;0;0;irc;rizon.#/g/sicp"
 default.current = on
 
 [notify]
