--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,13 +1,44 @@
-full_text=〉
+
+
+#NOTE: 〉〈
+full_text=
 align=center
 color=#666666
-separator=false
-separator_block_width=7
+separator=none
+separator_block_width=15
 
 [focused window]
-command=xprop -id $(xdotool getactivewindow) | grep 'WM_NAME(STRING)' | cut -d'"' -f2
-interval=3
-color=#A6D1FA
+command=echo 〉$(xprop -id $(xdotool getactivewindow) | grep 'WM_NAME(STRING)' | cut -d'"' -f2)〈
+interval=1
+color=#FFFFFF
+
+[clickme]
+command=notify-send "asdf"
+align=left
+signal=12
+
+
+[separator]
+
+[MPD]
+command=mpc current
+#color=#00FF00
+interval=20
+
+[volume]
+command=/usr/libexec/i3blocks/volume
+signal=10
+
+#weather.sh works in shell but not here. 
+#[Weather label]
+#color=#00FF00
+#full_text=☂ฺ ☀ฺ Weather ☂ฺ ☀ฺ
+#separator=false
+#
+#[Weather]
+#command=weather.sh 66502
+#interval=5 #was 1800
+#separator=false
 
 [time]
 command=date '+%H:%M'
