--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -529,6 +529,7 @@ default.buffer = "irc;server.rizon;1"
 default.buffer = "irc;server.blinkenshell;2"
 default.buffer = "irc;rizon.#/g/technology;3"
 default.buffer = "irc;rizon.#/g/sicp;4"
+default.buffer = "irc;blinkenshell.#blinkenshell;5"
 default.window = "1;0;0;0;irc;rizon.#/g/sicp"
 default.current = on
 
