--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.4.3
+# weechat.conf -- weechat v1.0
 #
 
 [debug]
@@ -17,6 +17,8 @@ bar_more_down = " + "
 bar_more_left = " -- "
 bar_more_right = " ++ "
 bar_more_up = " - "
+bare_display_exit_on_input = on
+bare_display_time_format = "%H:%M"
 buffer_auto_renumber = on
 buffer_notify_default = all
 buffer_position = end
@@ -45,7 +47,7 @@ emphasized_attributes = ""
 highlight = ""
 highlight_regex = ""
 highlight_tags = ""
-hotlist_add_buffer_if_away = on
+hotlist_add_conditions = "${away} || ${buffer.num_displayed} == 0"
 hotlist_buffer_separator = ", "
 hotlist_count_max = 2
 hotlist_count_min_msg = 2
@@ -54,6 +56,7 @@ hotlist_names_length = 0
 hotlist_names_level = 12
 hotlist_names_merged_buffers = off
 hotlist_prefix = "H: "
+hotlist_remove = merged
 hotlist_short_names = on
 hotlist_sort = group_time_asc
 hotlist_suffix = ""
@@ -412,6 +415,7 @@ status_filter = green
 status_more = yellow
 status_name = white
 status_name_ssl = lightgreen
+status_nicklist_count = default
 status_number = yellow
 status_time = default
 
@@ -528,9 +532,8 @@ default.buffer = "irc;server.freenode;1"
 default.buffer = "irc;server.rizon;1"
 default.buffer = "irc;server.blinkenshell;2"
 default.buffer = "irc;rizon.#/g/technology;3"
-default.buffer = "irc;rizon.#/g/sicp;4"
-default.buffer = "irc;blinkenshell.#blinkenshell;5"
-default.window = "1;0;0;0;irc;rizon.#/g/sicp"
+default.buffer = "irc;blinkenshell.#blinkenshell;4"
+default.window = "1;0;0;0;irc;rizon.#/g/technology"
 default.current = on
 
 [notify]
