--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,22 +1,25 @@
 
 
 #NOTE: 〉〈
-full_text=
 align=center
 color=#666666
+
+#''
+# "⮃"$ORAN"⮃ ⮒" $
 separator=none
 separator_block_width=15
 
+[run prompt]
+color=#ffffff
+command=echo ""
+align=left
+separator_block_width=1800
+
 [focused window]
-command=echo 〉$(xprop -id $(xdotool getactivewindow) | grep 'WM_NAME(STRING)' | cut -d'"' -f2)〈
+#command=echo 〉$(xprop -id $(xdotool getactivewindow) | grep 'WM_NAME(STRING)' | cut -d'"' -f2)〈
+command= echo _- $(xtitle) -_ 
 interval=1
 color=#FFFFFF
-
-[clickme]
-command=notify-send "asdf"
-align=left
-signal=12
-
 
 [separator]
 
