--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -530,10 +530,12 @@ title.type = root
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.freenode;1"
 default.buffer = "irc;server.rizon;1"
+default.buffer = "irc;server.irc.nixers.net;1"
 default.buffer = "irc;server.blinkenshell;2"
 default.buffer = "irc;rizon.#/g/technology;3"
 default.buffer = "irc;blinkenshell.#blinkenshell;4"
-default.window = "1;0;0;0;irc;rizon.#/g/technology"
+default.buffer = "irc;irc.nixers.net.#nixers;5"
+default.window = "1;0;0;0;irc;irc.nixers.net.#nixers"
 default.current = on
 
 [notify]
