--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -535,7 +535,8 @@ default.buffer = "irc;server.blinkenshell;2"
 default.buffer = "irc;rizon.#/g/technology;3"
 default.buffer = "irc;blinkenshell.#blinkenshell;4"
 default.buffer = "irc;irc.nixers.net.#nixers;5"
-default.window = "1;0;0;0;irc;irc.nixers.net.#nixers"
+default.buffer = "irc;freenode.#archlinux;6"
+default.window = "1;0;0;0;irc;rizon.#/g/technology"
 default.current = on
 
 [notify]
