Updates. I need to make the split for multi vs non-multi.
Former-commit-id: 66e3bf5da431616c694429a36ec1be79b7770c67

--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.0
+# weechat.conf -- weechat v1.0.1
 #
 
 [debug]
@@ -530,13 +530,10 @@ title.type = root
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.freenode;1"
 default.buffer = "irc;server.rizon;1"
-default.buffer = "irc;server.irc.nixers.net;1"
 default.buffer = "irc;server.blinkenshell;2"
 default.buffer = "irc;rizon.#/g/technology;3"
 default.buffer = "irc;blinkenshell.#blinkenshell;4"
-default.buffer = "irc;irc.nixers.net.#nixers;5"
-default.buffer = "irc;freenode.#archlinux;6"
-default.window = "1;0;0;0;irc;rizon.#/g/technology"
+default.window = "1;0;0;0;irc;blinkenshell.#blinkenshell"
 default.current = on
 
 [notify]
