Add default weechat conf's

--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -528,12 +528,7 @@ title.type = root
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.freenode;1"
-default.buffer = "irc;server.rizon;1"
-default.buffer = "irc;server.blinkenshell;2"
-default.buffer = "irc;rizon.#/g/technology;3"
-default.buffer = "irc;blinkenshell.#blinkenshell;4"
-default.window = "1;0;0;0;irc;blinkenshell.#blinkenshell"
+default.window = "1;0;0;0;core;weechat"
 default.current = on
 
 [notify]
