.gitignore changes, weechat conf
Former-commit-id: ea7d38e88c075375a7139eff492d7199c32be835

--- a/mpd/.gitignore
+++ b/mpd/.gitignore
@@ -1,5 +1,6 @@
 #MPD status files
-.config/mpd/log
 .config/mpd/pid
+.config/mpd/log
+.config/mpd/state
 .config/mpd/sticker.sql
 .config/mpd/database
