--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -528,7 +528,10 @@ title.type = root
 
 [layout]
 default.buffer = "core;weechat;1"
-default.window = "1;0;0;0;core;weechat"
+default.buffer = "irc;server.rc.rrerr.net;1"
+default.buffer = "irc;server.irc.freenode.net;1"
+default.buffer = "irc;rc.rrerr.net.#leafcat;2"
+default.window = "1;0;0;0;irc;rc.rrerr.net.#leafcat"
 default.current = on
 
 [notify]
