changes and junk
Former-commit-id: af85f91f9f3d5fa5257db9c5c742170ea0c7b275

--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -9,7 +9,7 @@
     background_image = None
     antialias = False
     show_titlebar = False
-    font = Termsyn 10
+    font = lemon 8
     cursor_blink = False
 [layouts]
   [[default]]
