--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -528,10 +528,13 @@ title.type = root
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.rc.rrerr.net;1"
-default.buffer = "irc;server.irc.freenode.net;1"
-default.buffer = "irc;rc.rrerr.net.#leafcat;2"
-default.window = "1;0;0;0;irc;rc.rrerr.net.#leafcat"
+default.buffer = "irc;server.freenode;1"
+default.buffer = "irc;server.rizon;1"
+default.buffer = "irc;server.blinkenshell;2"
+default.buffer = "irc;rizon.#/g/technology;3"
+default.buffer = "irc;blinkenshell.#blinkenshell;4"
+default.buffer = "irc;freenode.#archlinux;5"
+default.window = "1;0;0;0;irc;rizon.#/g/technology"
 default.current = on
 
 [notify]
