bspwm start. Schweet.
Former-commit-id: 4b290dabef22fe29c3d265d9a53ba1099c5486d7

--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -530,10 +530,12 @@ title.type = root
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.freenode;1"
 default.buffer = "irc;server.rizon;1"
+default.buffer = "irc;server.irc.freenode.net;1"
 default.buffer = "irc;server.blinkenshell;2"
 default.buffer = "irc;rizon.#/g/technology;3"
 default.buffer = "irc;blinkenshell.#blinkenshell;4"
 default.buffer = "irc;freenode.#archlinux;5"
+default.buffer = "irc;irc.freenode.net.#opennic;6"
 default.window = "1;0;0;0;irc;rizon.#/g/technology"
 default.current = on
 
