--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -528,15 +528,9 @@ title.type = root
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.freenode;1"
-default.buffer = "irc;server.rizon;1"
 default.buffer = "irc;server.irc.freenode.net;1"
-default.buffer = "irc;server.blinkenshell;2"
-default.buffer = "irc;rizon.#/g/technology;3"
-default.buffer = "irc;blinkenshell.#blinkenshell;4"
-default.buffer = "irc;freenode.#archlinux;5"
-default.buffer = "irc;irc.freenode.net.#opennic;6"
-default.window = "1;0;0;0;irc;rizon.#/g/technology"
+default.buffer = "irc;irc.freenode.net.#freenode;2"
+default.window = "1;0;0;0;irc;irc.freenode.net.#freenode"
 default.current = on
 
 [notify]
