Bar colors/font, WM switch again sue me
Former-commit-id: f51c4f6f9d0c3e5d327b965a5482f19466b15ebb

--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -7,10 +7,11 @@
     background_darkness = 0.7
     background_type = transparent
     background_image = None
-    antialias = False
-    show_titlebar = False
-    font = lemon 8
     cursor_blink = False
+    show_titlebar = False
+    antialias = False
+    font = uushi 9
+    allow_bold = False
 [layouts]
   [[default]]
     [[[child1]]]
