--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -528,9 +528,7 @@ title.type = root
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.irc.freenode.net;1"
-default.buffer = "irc;irc.freenode.net.#freenode;2"
-default.window = "1;0;0;0;irc;irc.freenode.net.#freenode"
+default.window = "1;0;0;0;core;weechat"
 default.current = on
 
 [notify]
