I'm sorry sir you need to be a directoy

--- a/home/weechat/.weechat/weechat.conf
+++ b/home/weechat/.weechat/weechat.conf
@@ -528,12 +528,9 @@ title.type = root
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.irc.freenote.net;1"
 default.buffer = "irc;server.irc.freenode.net;1"
-default.buffer = "irc;irc.freenode.net.##c;2"
-default.buffer = "irc;irc.freenode.net.#archlinux;3"
-default.buffer = "irc;irc.freenode.net.#qutebrowser;4"
-default.window = "1;0;0;0;irc;irc.freenode.net.#qutebrowser"
+default.buffer = "irc;irc.freenode.net.#anitwitter;2"
+default.window = "1;0;0;0;irc;irc.freenode.net.#anitwitter"
 default.current = on
 
 [notify]
