--- a/home/conky/.conkyrc
+++ b/home/conky/.conkyrc
@@ -1,118 +1,49 @@
-# THIS CONFIG RELIES ON 2 SCRIPTS, CPUSPEED AND CPUTEMP
-# YOUR SYSTEM MAY NOT REQUIRE THEM, REPLACE AS DESIRED
-
-# maintain spacing between certain elements
-use_spacer yes
-
-# set to yes if you want conky to be forked in the background
 background no
+update_interval 1
 
-use_xft yes
+override_utf8_locale yes
 
-# Xft font when Xft is enabled
-xftfont Bitstream Vera Sans Mono-7
-#xftfont Andale Mono-9
-#xftfont Clean-8
-#xftfont cubicfive10:pixelsize=8
-#xftfont squaredance10:pixelsize=14
-#xftfont swf!t_v02:pixelsize=10
-
-# Text alpha when using Xft
-xftalpha 1
-mail_spool $MAIL
-
-# Update interval in seconds
-update_interval 4.0
-
-# Create own window instead of using desktop (required in nautilus)
-own_window yes
-own_window_transparent yes
-own_window_type desktop
-#borders
-draw_borders no
-
-# Use double buffering (reduces flicker, may not work for everyone)
 double_buffer yes
-
-# Minimum size of text area
-minimum_size 280 5
-
-# Draw shades?
-draw_shades yes
-
-# Draw outlines?
-draw_outline no # amplifies text
-
-# Draw borders around text
-draw_borders no
-
-# Stippled borders?
-stippled_borders 0
-
-# border margins
-border_margin 9
-
-# border width
-border_width 1
-
-# Default colors and also border colors, grey90 == #e5e5e5
-default_color grey90
-default_shade_color black
-default_outline_color DarkGrey
-
-# Text alignment, other possible values are commented
-#alignment top_left
-alignment top_right
-#alignment bottom_left
-#alignment bottom_right
-
-# Gap between borders of screen and text
-gap_x 24
-gap_y 24
-
-# Subtract file system buffers from used memory?
 no_buffers yes
 
-# set to yes if you want all text to be in uppercase
+text_buffer_size 2048
+imlib_cache_size 0
+
+
+own_window yes
+own_window_type override
+own_window_transparent yes
+own_window_hints undecorated,sticky,skip_taskbar,skip_pager,below
+
+border_inner_margin 0
+border_outer_margin 0
+maximum_width 500
+minimum_size 1420 850
+
+
+alignment bl
+gap_x 475  #Vm380, Vr1238, Vl-40, Hr915, Hmr 780 Hbr 900
+gap_y -610  #Vb-520, Vt70 Ht-136, Hb-617, Hmr -240 Hbr -540
+
+draw_shades yes
+draw_outline no
+draw_borders no
+draw_graph_borders no
+
+use_xft yes
+xftfont lime:size=8
+xftalpha 0,02
+
 uppercase no
 
-# stuff after 'TEXT' will be formatted on screen
+default_color FBFBFB
+
+	# — Lua Load — #
+	lua_load rings.lua
+	lua_draw_hook_pre ring_stats
+
 
 TEXT
-${color #ffcb48}$nodename$color      ${color #828282}$sysname $kernel on 
-$machine$color
-   ${color #98c2c7}Batt:$color   ${battery}
 
-${color #ffcb48}PROCESSING$color
-   ${color #98c2c7}CPU:$color     ${execi 5 cpuspeed}MHz       $cpu% 
-   ${execi 5 cputemp}Â°C
-   ${color #78af78}$cpubar
-   ${color #78af78}${cpugraph 78af78 a3a3a3}
+${offset 33}${voffset 185}ROOT${offset 28}HOME${offset 30}CPU${offset 33}RAM${offset 31}DOWN${offset 33}UP
 
-   ${color #98c2c7}NAME             PID       CPU%      MEM%
-   ${color #e5e5e5}${top name 1} ${top pid 1}   ${top cpu 1}    ${top mem 1}
-   ${color #c4c4c4}${top name 2} ${top pid 2}   ${top cpu 2}    ${top mem 2}
-   ${color #a3a3a3}${top name 3} ${top pid 3}   ${top cpu 3}    ${top mem 3}
-   ${color #828282}${top name 4} ${top pid 4}   ${top cpu 4}    ${top mem 4}
-
-${color #ffcb48}DATA$color
-   ${color #98c2c7}RAM:$color     $memperc%         ${color 
-#78af78}${membar 6}${color}
-
-   ${color #98c2c7}NAME             PID       CPU%      MEM%
-   ${color #e5e5e5}${top_mem name 1} ${top_mem pid 1}   ${top_mem cpu 1} 
-    ${top_mem mem 1}
-   ${color #c4c4c4}${top_mem name 2} ${top_mem pid 2}   ${top_mem cpu 2} 
-    ${top_mem mem 2}
-   ${color #a3a3a3}${top_mem name 3} ${top_mem pid 3}   ${top_mem cpu 3} 
-    ${top_mem mem 3}
-   ${color #828282}${top_mem name 4} ${top_mem pid 4}   ${top_mem cpu 4} 
-    ${top_mem mem 4}
-
-   ${color #98c2c7}Swap:$color    $swapperc%         ${color 
-#78af78}${swapbar 6}$color
-   ${color #98c2c7}/:$color       ${fs_free_perc /}%  $fs_free  ${color 
-#78af78}${fs_bar 6 /}$color
-
-   ${color #98c2c7}Upload:$color  ${upspeed eth0}kb/s${color #98c2c7} 
-   Download:$color  ${downspeed eth0}kb/s
