--- a/home/tmux/.tmux.conf
+++ b/home/tmux/.tmux.conf
@@ -1,1 +1,132 @@
+# change prefix to Ctrl-a (like in gnu-screen)
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# shell
+set -g default-command /bin/bash
+set -g default-shell /bin/bash
+
+# start with window 1 (instead of 0)
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
+
+
+# screen mode
 set -g default-terminal "screen-256color"
+
+
+# source config file
+bind r source-file ~/.tmux.conf
+
+
+# history
+set -g history-limit 4096
+
+
+# use vi mode
+setw -g mode-keys vi
+set -g status-keys vi
+setw -g utf8 on
+# use mouse in copy mode
+setw -g mode-mouse on
+
+
+# easy-to-remember split pane commands
+unbind %
+unbind '"'
+bind | split-window -h
+bind - split-window -v
+
+# with mouse (click on pretty little boxes)
+set -g mouse-select-window on
+
+# colon :
+bind : command-prompt
+
+# panes
+set -g mouse-select-pane on
+set -g pane-border-fg black
+set -g pane-active-border-fg white
+
+# resize panes with mouse (drag borders)
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+
+# status line
+set -g status-utf8 on
+set -g status-justify left
+set -g status-bg default
+#set -g status-fg colour12
+set -g status-interval 2
+
+
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
+
+
+#window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+
+
+# window status
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#I #W "
+setw -g window-status-current-format "#I #W "
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
+setw -g window-status-content-bg colour0
+setw -g window-status-content-fg colour11
+setw -g window-status-content-attr bold,blink,reverse
+
+
+# Info on right
+set -g status-right-length 60
+set -g status-right '%a %H:%M'
+
+
+# Info on left (I don't have a session display for now)
+set -g status-left ''
+
+# loud or quiet?
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-content off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-window-option -g monitor-content on
+set-option -g bell-action none
+
+
+# tmux clock
+set -g clock-mode-colour blue
+
+
+# some key-binding changes
+bind x kill-pane
+bind X next-layout
+bind Z previous-layout
+
+# moving between panes with vim movement keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# moving between windows with vim movement keys
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# resize panes with vim movement keys
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
