transparent window borders

--- a/home/compton/.config/compton.conf
+++ b/home/compton/.config/compton.conf
@@ -4,6 +4,9 @@
 ## Sometimes a little transparency can soften the edges
 shadow-opacity = 0.8;
 
+## transparent borders are pretty okay
+frame-opacity = 0.6;
+
 ## Keep the shadows tight
 shadow = true;
 shadow-radius = 4;
