--- a/home/compton/.config/compton.conf
+++ b/home/compton/.config/compton.conf
@@ -3,18 +3,20 @@
 
 ## Sometimes a little transparency can soften the edges
 shadow-opacity = 0.8;
+shadow-red = 0.0;
+shadow-green = 0.0;
+shadow-blue = 0.0;
 
 ## transparent borders are pretty okay
-frame-opacity = 0.6;
+frame-opacity = 0.7;
 
 ## Keep the shadows tight
 shadow = true;
-shadow-radius = 4;
-shadow-offset-x = -3;
-shadow-offset-y = -3;
+shadow-radius = 1;
+shadow-offset-x = 1;
+shadow-offset-y = 1;
 no-dock-shadow = false;
 no-dnd-shadow = true;
-clear-shadow = true;
 
 ## Soften the window and workspace changes
 fading = true;
