Change font to xft font(Dejavu Sans Mono), revert colors, change borders, account for slant changes in fork of bar
Former-commit-id: d999d104c40a1234222eda31624eecebaede543f

--- a/home/ncmpcpp/.ncmpcpp/config
+++ b/home/ncmpcpp/.ncmpcpp/config
@@ -3,7 +3,9 @@ visualizer_output_name = "my_fifo"
 visualizer_sync_interval = "25"
 visualizer_in_stereo = "yes"
 visualizer_type = "spectrum" (spectrum/wave)
-visualizer_look="⣿⡇"
+#visualizer_look="⣿⡇"
+visualizer_look="++"
+
 
 # Playlist
 song_columns_list_format = "$L(9)[white]{l} (20)[red]{a} (30)[green]{b}$R(20)[cyan]{t}"
