smaller slants(should really just give these a toglleable setting inbar/profile), new tmux.conf

--- a/home/tmux/.tmux.conf
+++ b/home/tmux/.tmux.conf
@@ -55,46 +55,11 @@ set -g pane-active-border-fg white
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 
-# status line
-set -g status-utf8 on
-set -g status-justify left
-set -g status-bg default
-#set -g status-fg colour12
-set -g status-interval 2
-
-
 # messaging
 set -g message-fg black
 set -g message-bg yellow
 set -g message-command-fg blue
 set -g message-command-bg black
-
-
-#window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
-
-
-# window status
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#I #W "
-setw -g window-status-current-format "#I #W "
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
-setw -g window-status-content-bg colour0
-setw -g window-status-content-fg colour11
-setw -g window-status-content-attr bold,blink,reverse
-
-
-# Info on right
-set -g status-right-length 60
-set -g status-right '%a %H:%M'
-
-
-# Info on left (I don't have a session display for now)
-set -g status-left ''
 
 # loud or quiet?
 set-option -g visual-activity off
@@ -105,10 +70,8 @@ set-window-option -g monitor-activity off
 set-window-option -g monitor-content on
 set-option -g bell-action none
 
-
 # tmux clock
 set -g clock-mode-colour blue
-
 
 # some key-binding changes
 bind x kill-pane
@@ -130,3 +93,25 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Highlighting the active window in status bar
+setw -g window-status-current-bg default
+setw -g window-status-current-fg default
+setw -g window-status-bg default
+setw -g window-status-fg white
+#setw -g window-status-format '#[fg=black]#[bg=black,bold] #I #[bg=default]#[fg=black,bold] #W '
+#setw -g window-status-current-format '#[fg=default]#[bg=green,bold] #I #[fg=black,bold]#[bg=default] #W  '
+setw -g window-status-format '#[bg=default]#[fg=cyan]◼ '
+setw -g window-status-current-format '#[fg=white]#[bg=default]◼ '
+
+# Status Bar
+set -g status-bg default
+set -g status-fg cyan
+set -g status-interval 4
+set -g status-left ''
+set -g status-right ''
+#set -g status-left '#[fg=white,bold]#S#[fg=cyan] | #[fg=white,bold]#(echo $USER)  '
+#set -g status-right '#[fg=white]#H#[fg=cyan] | #[fg=white]#(uname -r)#[default]'
+set -g status-justify centre
+set -g base-index 1
+
