thin look, bigger slants, clean up tmux, change colors to jellybean, correct lemonbar exec name

--- a/home/tmux/.tmux.conf
+++ b/home/tmux/.tmux.conf
@@ -1,65 +1,29 @@
-# change prefix to Ctrl-a (like in gnu-screen)
+# change prefix to Ctrl-s (Nice placement with vi keys, not conflict with screen)
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-s
+bind-key C-s send-prefix
 
 # shell
 set -g default-command /bin/bash
 set -g default-shell /bin/bash
 
-# start with window 1 (instead of 0)
+# winow/panel index's at 1:
 set -g base-index 1
-
-# start with pane 1
 set -g pane-base-index 1
-
 
 # screen mode
 set -g default-terminal "screen-256color"
 
-
 # source config file
 bind r source-file ~/.tmux.conf
 
-
 # history
 set -g history-limit 4096
-
-
-# use vi mode
-setw -g mode-keys vi
-set -g status-keys vi
-setw -g utf8 on
-# use mouse in copy mode
-setw -g mode-mouse on
-
-
-# easy-to-remember split pane commands
-unbind %
-unbind '"'
-bind | split-window -h
-bind - split-window -v
-
-# with mouse (click on pretty little boxes)
-set -g mouse-select-window on
-
-# colon :
-bind : command-prompt
 
 # panes
 set -g mouse-select-pane on
 set -g pane-border-fg black
 set -g pane-active-border-fg white
-
-# resize panes with mouse (drag borders)
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
 
 # loud or quiet?
 set-option -g visual-activity off
@@ -67,16 +31,35 @@ set-option -g visual-bell off
 set-option -g visual-content off
 set-option -g visual-silence off
 set-window-option -g monitor-activity off
-set-window-option -g monitor-content on
+set-window-option -g monitor-content off
 set-option -g bell-action none
-
-# tmux clock
-set -g clock-mode-colour blue
 
 # some key-binding changes
 bind x kill-pane
 bind X next-layout
 bind Z previous-layout
+
+# Status Bar
+set-option -g status-position top
+set-option -g status-utf8 on
+set-option -g status-justify right
+set-option -g status-bg '#1e1e1e'
+set-option -g status-fg '#808080'
+set-option -g status-interval 5
+set-option -g status-left-length 60
+set-option -g visual-activity on
+set-window-option -g monitor-activity on
+set-option -g status-left '#[fg=#808080]#T#[default]'
+set-option -g status-right '#[fg=#808080]#S:#P#[default]'
+set-window-option -g window-status-current-bg '#404040'
+set-window-option -g window-status-current-fg '#808080'
+set-window-option -g window-status-bg '#1e1e1e'
+set-window-option -g window-status-fg '#808080'
+
+### Vi options:
+setw -g mode-keys vi
+set -g status-keys vi
+setw -g utf8 on
 
 # moving between panes with vim movement keys
 bind h select-pane -L
@@ -88,30 +71,14 @@ bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-# resize panes with vim movement keys
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
 
-# Highlighting the active window in status bar
-setw -g window-status-current-bg default
-setw -g window-status-current-fg default
-setw -g window-status-bg default
-setw -g window-status-fg white
-#setw -g window-status-format '#[fg=black]#[bg=black,bold] #I #[bg=default]#[fg=black,bold] #W '
-#setw -g window-status-current-format '#[fg=default]#[bg=green,bold] #I #[fg=black,bold]#[bg=default] #W  '
-setw -g window-status-format '#[bg=default]#[fg=cyan]◼ '
-setw -g window-status-current-format '#[fg=white]#[bg=default]◼ '
+### Mouse options:
+# use mouse in copy mode
+setw -g mode-mouse on
 
-# Status Bar
-set -g status-bg default
-set -g status-fg cyan
-set -g status-interval 4
-set -g status-left ''
-set -g status-right ''
-#set -g status-left '#[fg=white,bold]#S#[fg=cyan] | #[fg=white,bold]#(echo $USER)  '
-#set -g status-right '#[fg=white]#H#[fg=cyan] | #[fg=white]#(uname -r)#[default]'
-set -g status-justify centre
-set -g base-index 1
+# with mouse (click on pretty little boxes)
+set -g mouse-select-window on
 
+# resize panes with mouse (drag borders)
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
