Move away from shadows, go with a vanilla lemonbar config, move icon color config into panel profile

--- a/home/compton/.config/compton.conf
+++ b/home/compton/.config/compton.conf
@@ -11,7 +11,7 @@ shadow-blue = 0.0;
 frame-opacity = 0.5;
 
 ## Keep the shadows tight
-shadow = true;
+shadow = false;
 shadow-radius = 1;
 shadow-offset-x = 1;
 shadow-offset-y = 1;
