Fix timing error in .xinitrc, add some aliases from @lordzweigar, change window delim to fix an ncmpcpp bug
Former-commit-id: 54b7e7f06d8444d6ca2d2e3f3f03ccb439b0ad43

--- a/home/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/home/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -623,7 +623,7 @@ title-format = {title}
 # cache-size (int):
 #     Size of the HTTP network cache.
 #     Default: 52428800
-download-directory =
+download-directory = /home/$USER/Downloads
 maximum-pages-in-cache =
 object-cache-capacities =
 offline-storage-default-quota =
