Ashes colorscheme, qutebrowser sameness, misc

--- a/home/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/home/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -623,7 +623,7 @@ title-format = {title}
 # cache-size (int):
 #     Size of the HTTP network cache.
 #     Default: 52428800
-download-directory = /home/$USER/Downloads
+download-directory =
 maximum-pages-in-cache =
 object-cache-capacities =
 offline-storage-default-quota =
@@ -1012,6 +1012,18 @@ DEFAULT = https://google.com/search?q={}
 # downloads.bg.error (qcolor):
 #     Background color for downloads with errors.
 #     Default: red
+tabs.fg.odd = #95AEC7
+tabs.fg.even = ${tabs.fg.odd}
+tabs.fg.selected = #F3F4F5
+tabs.bg.odd = #1C2023
+tabs.bg.even = ${tabs.bg.odd}
+tabs.bg.selected = ${tabs.bg.odd}
+tabs.bg.bar = ${tabs.bg.odd}
+tabs.indicator.start = #0000aa
+tabs.indicator.stop = ${tabs.bg.odd}
+tabs.indicator.error = #ff0000
+tabs.indicator.system = rgb
+
 completion.fg = white
 completion.bg = #333333
 completion.alternate-bg = #444444
@@ -1024,32 +1036,24 @@ completion.item.selected.bg = #e8c000
 completion.item.selected.border.top = #bbbb00
 completion.item.selected.border.bottom = ${completion.item.selected.border.top}
 completion.match.fg = #ff4444
-statusbar.bg = black
-statusbar.fg = white
+
+statusbar.bg = ${tabs.bg.odd}
+statusbar.fg = ${tabs.fg.odd}
 statusbar.bg.error = red
 statusbar.bg.warning = darkorange
 statusbar.bg.prompt = darkblue
 statusbar.bg.insert = darkgreen
 statusbar.progress.bg = white
 statusbar.url.fg = ${statusbar.fg}
-statusbar.url.fg.success = lime
+statusbar.url.fg.success = ${tabs.fg.selected}
 statusbar.url.fg.error = orange
 statusbar.url.fg.warn = yellow
 statusbar.url.fg.hover = aqua
-tabs.fg.odd = #808080
-tabs.fg.even = #808080
-tabs.fg.selected = white
-tabs.bg.odd = #1a1a1a
-tabs.bg.even = #1a1a1a
-tabs.bg.selected = #1a1a1a
-tabs.bg.bar = #1a1a1a
-tabs.indicator.start = #0000aa
-tabs.indicator.stop = #1a1a1a
-tabs.indicator.error = #ff0000
-tabs.indicator.system = rgb
+
 hints.fg = black
 hints.fg.match = green
 hints.bg = -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFF785), color-stop(100%,#FFC542))
+
 downloads.fg = #ffffff
 downloads.bg.bar = black
 downloads.bg.start = #0000aa
