Start the tmux change, add vim plugins and some options, add sysinfo alias.

--- a/home/tmux/.tmux.conf
+++ b/home/tmux/.tmux.conf
@@ -43,18 +43,18 @@ bind Z previous-layout
 set-option -g status-position top
 set-option -g status-utf8 on
 set-option -g status-justify right
-set-option -g status-bg '#1e1e1e'
-set-option -g status-fg '#808080'
+set-option -g status-bg "$defaultBG"
+set-option -g status-fg "$defautFG"
 set-option -g status-interval 5
 set-option -g status-left-length 60
 set-option -g visual-activity on
 set-window-option -g monitor-activity on
 set-option -g status-left '#[fg=#808080]#T#[default]'
 set-option -g status-right '#[fg=#808080]#S:#P#[default]'
-set-window-option -g window-status-current-bg '#404040'
-set-window-option -g window-status-current-fg '#808080'
-set-window-option -g window-status-bg '#1e1e1e'
-set-window-option -g window-status-fg '#808080'
+set-window-option -g window-status-current-bg "$defaultBG"
+set-window-option -g window-status-current-fg "$activeFG"
+set-window-option -g window-status-bg "$defaultBG"
+set-window-option -g window-status-fg "$defaultFG"
 
 ### Vi options:
 setw -g mode-keys vi
