Added the ashes and jellybean themes

--- a/home/termite/.config/termite/themes/ashes.config
+++ b/home/termite/.config/termite/themes/ashes.config
@@ -29,45 +29,43 @@ browser = chromium
 #modify_other_keys = false
 
 [colors]
-
-
 # special
-foreground      = #8ca68c
-foreground_bold = #8ca68c
-cursor          = #8ca68c
-background      = #131513
+foreground      = #c7ccd1
+foreground_bold = #c7ccd1
+cursor          = #c7ccd1
+background      = #1c2023
 
 # black
-color0  = #131513
-color8  = #687d68
+color0  = #1c2023
+color8  = #747c84
 
 # red
-color1  = #e6193c
-color9  = #e6193c
+color1  = #c7ae95
+color9  = #c7ae95
 
 # green
-color2  = #29a329
-color10 = #29a329
+color2  = #95c7ae
+color10 = #95c7ae
 
 # yellow
-color3  = #c3c322
-color11 = #c3c322
+color3  = #aec795
+color11 = #aec795
 
 # blue
-color4  = #3d62f5
-color12 = #3d62f5
+color4  = #ae95c7
+color12 = #ae95c7
 
 # magenta
-color5  = #ad2bee
-color13 = #ad2bee
+color5  = #c795ae
+color13 = #c795ae
 
 # cyan
-color6  = #1999b3
-color14 = #1999b3
+color6  = #95aec7
+color14 = #95aec7
 
 # white
-color7  = #8ca68c
-color15 = #f0fff0
+color7  = #c7ccd1
+color15 = #f3f4f5
 
 # 20% background transparency (requires a compositor)
 #background = rgba(63, 63, 63, 0.8)
